--- a/Seminarski.tex
+++ b/Seminarski.tex
@@ -125,7 +125,7 @@ To dovodi do toga da je opšti upotrebljivi kvantni algoritam niz uzastopnih ini
 
 Praktična konstrukcija kvantnog računara je još uvek u domenu laboratorijskih eksperimenata uz tek poneki komercijalni pokušaj i za potrebe kvantnog računarstva, sisteme predstavljamo različitim idealizovanim modelima kao što su npr kvantna Turingova mašina (eng.~\emph{quantum Turing machine, QTM}) ili kvantno kolo (eng. ~\emph{quantum circuit}) dok zanemarujemo prisustvo greške i efekte smetnji (eng.~\emph{interference}) i dekoherencije koji su realnost kvantnih računara.
 
-Neki od opisanih funkcionalnih jezika (Quipper,QFC) rade na modelu kvantne memorije sa nasumičnim pristupom (eng.~\emph{Quantum Random Access Memory, Quantum RAM, QRAM} opisan u \cite{qram_model}.
+Jedan od opisanih funkcionalnih jezika, Quipper, radi na modelu kvantne memorije sa nasumičnim pristupom (eng.~\emph{Quantum Random Access Memory, Quantum RAM, QRAM} koji je detaljnije opisan u \cite{qram_model}.
 
 Kvantni računar je zamišljen kao koprocesor povezan sa klasičnim računarom na kome se izvršava kontrola toka. Kvantni uređaj sadrži fiksni unapred određeni broj kubita i sposoban je da ih individualno adresira. Na kvantnom računaru se izvršavaju samo 2 tipa operacija, unitarne operacije i merenja.  Smatra se da je određen broj osnovnih unitarnih operacija realizovan kroz ugrađenje kvantne kapije i da su one oblika ''Primeni ugrađenu operaciju na određene kubite''. Ove operacije vraćaju potvrdu kvantnog računara o izvršenju ali ne i bilo kakvu drugu informaciju. Informacije o rezultatu se dobijaju operacijama merenja, oblika ''izmeri kubit q'', ova operacija vraća 0 ili 1 klasičnom računaru sa određenim verovatnoćama.
 
