--- a/prezentacija.tex
+++ b/prezentacija.tex
@@ -122,7 +122,7 @@ Matematički fakultet \\ % Your institution for the title page
 \begin{frame}
 \frametitle{Funkcionalno programiranje}
 \begin{itemize}
-\item{Programska paradigma u kojoj je osnovni način izračunavanja primena funkcija na argumente}
+\item{Programska paradigma u kojoj je osnovni način izračunavanja primena funkcija na argumente}\cite{p4}
 \item{Funkcije višeg reda}
     \begin{itemize}
     \item{za argumente uzimaju druge funkcije ili kao svoj rezultat vraćaju funkciju }
@@ -196,7 +196,8 @@ Matematički fakultet \\ % Your institution for the title page
 \newblock Quantum Computation and Quantum Information: 10th Anniversary Edition
 \bibitem{p3} Alexander S. Green and Peter LeFanu Lumsdaine and Neil J. Ross and Peter Selinger and Benoît Valiron (2013)
 \newblock Quipper: A Scalable Quantum Programming Language
-
+\bibitem[Michaelson, 2011]{p4} Greg Michaelson (2011)
+\newblock An introduction to functional programming through lambda calculus
 \end{thebibliography}
 }
 \end{frame}
