--- a/prezentacija.tex
+++ b/prezentacija.tex
@@ -87,7 +87,7 @@ Matematički fakultet \\ % Your institution for the title page
 	\begin{itemize}
     \item{superpozicija}\\
 	čestica postoji u više stanja istovremeno, pre merenja
-    \item{spletenost}\\
+    \item{zapletenost}\\
 	rezultat merenja jedne čestice determiniše rezultat merenja druge čestice, bez obzira na njihovu udaljenost
     \end{itemize}
 \item{Kvantni računar je računar koji u svom radu direktno koristi efekte kvantne mehanike za operacije nad podacima}
